[search] Fix issue with Algolia modal on small screens

--- a/src/globals.css
+++ b/src/globals.css
@@ -233,6 +233,13 @@ https://tailwindcss.com/docs/adding-custom-styles#using-css-and-layer
   --sl-text-5xl: clamp(1.48rem, 3.42vi + 0.62rem, 3.36rem);
 }
 
+/* Required due to Algolia DocSearch bug: https://github.com/algolia/docsearch/issues/2243 */
+@media (max-width: 768px) {
+  .DocSearch-Container {
+    position: fixed !important;
+  }
+}
+
 .sl-markdown-content {
   font-size: var(--sl-text-base);
 }
@@ -504,3 +511,4 @@ astro-island[component-export="GraphQLEditor"] {
     }
   }
 }
+
